--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -21,7 +21,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/resultText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -29,7 +29,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="50dp"
-                android:text="Name"
+                android:text="0"
                 android:textAlignment="textEnd"
                 android:textSize="45sp" />
         </LinearLayout>
@@ -48,7 +48,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
-                android:text="7" />
+                android:backgroundTint="#960000ff"
+                android:text="7"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/eightButton"
@@ -58,7 +61,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
-                android:text="8" />
+                android:backgroundTint="#960000ff"
+                android:text="8"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/nineButton"
@@ -68,7 +74,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
-                android:text="9" />
+                android:backgroundTint="#960000ff"
+                android:text="9"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/fourButton"
@@ -78,7 +87,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
-                android:text="4" />
+                android:backgroundTint="#960000ff"
+                android:text="4"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/fiveButton"
@@ -88,7 +100,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
-                android:text="5" />
+                android:backgroundTint="#960000ff"
+                android:text="5"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/sixButton"
@@ -98,7 +113,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
-                android:text="6" />
+                android:backgroundTint="#960000ff"
+                android:text="6"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/oneButton"
@@ -108,7 +126,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
-                android:text="1" />
+                android:backgroundTint="#960000ff"
+                android:text="1"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/twoButton"
@@ -118,7 +139,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
-                android:text="2" />
+                android:backgroundTint="#960000ff"
+                android:text="2"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/threeButton"
@@ -128,7 +152,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
-                android:text="3" />
+                android:backgroundTint="#960000ff"
+                android:text="3"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/clearButton"
@@ -139,7 +166,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
-                android:text="CLEAR" />
+                android:backgroundTint="@android:color/holo_blue_bright"
+                android:text="CLEAR"
+                android:textColor="#ffffff"
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/zeroButton"
@@ -149,7 +179,10 @@
                 android:layout_columnWeight="1"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
-                android:text="0" />
+                android:backgroundTint="#960000ff"
+                android:text="0"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
             <ImageButton
                 android:id="@+id/divideButton"
@@ -159,6 +192,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
+                android:backgroundTint="#960000ff"
                 app:srcCompat="@drawable/divide" />
 
             <ImageButton
@@ -169,6 +203,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
+                android:backgroundTint="#960000ff"
                 app:srcCompat="@drawable/multiply" />
 
             <ImageButton
@@ -179,6 +214,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
+                android:backgroundTint="#960000ff"
                 app:srcCompat="@drawable/subtract" />
 
             <ImageButton
@@ -189,6 +225,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
+                android:backgroundTint="#960000ff"
                 app:srcCompat="@drawable/add" />
         </GridLayout>
     </LinearLayout>
