--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -20,15 +20,15 @@
             android:background="@android:color/holo_blue_bright"
             android:orientation="vertical">
 
-            <EditText
+            <TextView
                 android:id="@+id/resultText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
+                android:maxLines="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="50dp"
+                android:selectAllOnFocus="true"
                 android:text="0"
                 android:textAlignment="textEnd"
                 android:textSize="45sp" />
@@ -49,6 +49,7 @@
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="7"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -62,6 +63,7 @@
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="8"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -75,6 +77,7 @@
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="9"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -88,6 +91,7 @@
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="4"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -101,6 +105,7 @@
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="5"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -114,6 +119,7 @@
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="6"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -127,6 +133,7 @@
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="1"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -140,6 +147,7 @@
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="2"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -153,6 +161,7 @@
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="3"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -167,6 +176,7 @@
                 android:layout_row="3"
                 android:layout_rowWeight="1"
                 android:backgroundTint="@android:color/holo_blue_bright"
+                android:elevation="2dp"
                 android:text="CLEAR"
                 android:textColor="#ffffff"
                 android:textSize="30sp" />
@@ -180,6 +190,7 @@
                 android:layout_row="3"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 android:text="0"
                 android:textColor="#000000"
                 android:textSize="30sp" />
@@ -193,6 +204,7 @@
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 app:srcCompat="@drawable/divide" />
 
             <ImageButton
@@ -204,6 +216,7 @@
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 app:srcCompat="@drawable/multiply" />
 
             <ImageButton
@@ -215,6 +228,7 @@
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 app:srcCompat="@drawable/subtract" />
 
             <ImageButton
@@ -226,7 +240,18 @@
                 android:layout_row="3"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:elevation="2dp"
                 app:srcCompat="@drawable/add" />
         </GridLayout>
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/equalButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:elevation="5dp"
+        app:srcCompat="@drawable/equal"
+        tools:layout_editor_absoluteX="276dp"
+        tools:layout_editor_absoluteY="116dp" />
 </android.support.constraint.ConstraintLayout>
