--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -8,31 +8,34 @@
     tools:context="whitaker.anthony.coolcalc.CalcActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/resultText"
             android:layout_width="match_parent"
             android:layout_height="165dp"
             android:background="@android:color/holo_blue_bright"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/resultText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="50dp"
-                android:selectAllOnFocus="true"
-                android:text="0"
-                android:textAlignment="textEnd"
-                android:textSize="45sp" />
-        </LinearLayout>
+            android:gravity="center_vertical|end"
+            android:maxLines="1"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:selectAllOnFocus="true"
+            android:text="@string/num0"
+            android:textSize="45sp" />
 
         <GridLayout
             android:layout_width="match_parent"
@@ -50,7 +53,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="7"
+                android:text="@string/num7"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -64,7 +67,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="8"
+                android:text="@string/num8"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -78,7 +81,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="9"
+                android:text="@string/num9"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -92,7 +95,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="4"
+                android:text="@string/num4"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -106,7 +109,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="5"
+                android:text="@string/num5"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -120,7 +123,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="6"
+                android:text="@string/num6"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -134,7 +137,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="1"
+                android:text="@string/num1"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -148,7 +151,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="2"
+                android:text="@string/num2"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -162,7 +165,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="3"
+                android:text="@string/num3"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -177,7 +180,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="@android:color/holo_blue_bright"
                 android:elevation="2dp"
-                android:text="CLEAR"
+                android:text="@string/clear"
                 android:textColor="#ffffff"
                 android:textSize="30sp" />
 
@@ -191,7 +194,7 @@
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
                 android:elevation="2dp"
-                android:text="0"
+                android:text="@string/num0"
                 android:textColor="#000000"
                 android:textSize="30sp" />
 
@@ -204,6 +207,7 @@
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:contentDescription="@string/op_divide"
                 android:elevation="2dp"
                 app:srcCompat="@drawable/divide" />
 
@@ -216,6 +220,7 @@
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:contentDescription="@string/op_multiply"
                 android:elevation="2dp"
                 app:srcCompat="@drawable/multiply" />
 
@@ -228,6 +233,7 @@
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:contentDescription="@string/op_subtract"
                 android:elevation="2dp"
                 app:srcCompat="@drawable/subtract" />
 
@@ -240,6 +246,7 @@
                 android:layout_row="3"
                 android:layout_rowWeight="1"
                 android:backgroundTint="#960000ff"
+                android:contentDescription="@string/op_add"
                 android:elevation="2dp"
                 app:srcCompat="@drawable/add" />
         </GridLayout>
@@ -249,9 +256,14 @@
         android:id="@+id/equalButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginTop="116dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/op_equals"
         android:elevation="5dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/equal"
-        tools:layout_editor_absoluteX="276dp"
-        tools:layout_editor_absoluteY="116dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 </android.support.constraint.ConstraintLayout>
